# HabitTracker

./: pyproject.toml
data/: habits.json
src/myapp/: main.py
src/myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/myapp/adapters/: json_storage.py
src/myapp/app/: habit_tracker_gui.py  main.py
src/myapp/business_logic/: habit_manager.py  xp_system.py
src/myapp/contracts/: habit_contract.py  storage_interface.py
src/myapp/dummies/: mock_storage.py
